fix mobile header wrapping

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -24,6 +24,7 @@
     text-transform: uppercase;
     display: flex;
     margin-bottom: 8px;
+    white-space: nowrap;
 
     @media (max-width: 992px) {
       font-size: 12px;
